--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "redux-devtools": "^3.3.2",
     "request": "^2.79.0",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0"
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.17.0"
   },
   "devDependencies": {
     "css-loader": "^0.26.1",
@@ -38,15 +39,17 @@
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^4.5.0",
+    "react-hot-loader": "^3.0.0-beta.2",
     "sass-loader": "^6.0.0",
     "style-loader": "^0.13.1",
-    "webpack-hot-middleware": "^2.17.0"
+    "webpack-dev-server": "^2.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -d --watch",
     "build": "webpack -p",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "web-dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
